// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyFigures Snapshots Empty Array 1`] = `
<ul
  className="sc-AxjAm bsVHNb"
/>
`;

exports[`KeyFigures Snapshots With children 1`] = `
<ul
  className="sc-AxjAm bsVHNb"
>
  <li
    className="sc-AxirZ kCFYzC"
  >
    <h3
      className="sc-AxiKw dJsfJr"
    >
      Label
    </h3>
    <span
      className="sc-AxhCb zWhnK"
    >
       
      45 854
    </span>
  </li>
  <li
    className="sc-AxirZ kCFYzC"
  >
    <h3
      className="sc-AxiKw dJsfJr"
    >
      Available
    </h3>
    <span
      className="sc-AxhCb zWhnK"
    >
       
      456 486
    </span>
  </li>
  <li
    className="sc-AxirZ kCFYzC"
  >
    <h3
      className="sc-AxiKw dJsfJr"
    >
      New Label
    </h3>
    <span
      className="sc-AxhCb zWhnK"
    >
       
      346
    </span>
  </li>
</ul>
`;

exports[`KeyFigures Snapshots With figures 1`] = `
<ul
  className="sc-AxjAm bsVHNb"
>
  <li
    className="sc-AxirZ kCFYzC"
  >
    <h3
      className="sc-AxiKw dJsfJr"
    >
      Label
    </h3>
    <span
      className="sc-AxhCb zWhnK"
    >
       
      45 854
    </span>
  </li>
  <li
    className="sc-AxirZ kCFYzC"
  >
    <h3
      className="sc-AxiKw dJsfJr"
    >
      Available
    </h3>
    <span
      className="sc-AxhCb zWhnK"
    >
       
      456 486
    </span>
  </li>
  <li
    className="sc-AxirZ kCFYzC"
  >
    <h3
      className="sc-AxiKw dJsfJr"
    >
      New Label
    </h3>
    <span
      className="sc-AxhCb zWhnK"
    >
       
      346
    </span>
  </li>
</ul>
`;

exports[`KeyFigures Snapshots With one figure 1`] = `
<ul
  className="sc-AxjAm bsVHNb"
>
  <li
    className="sc-AxirZ kCFYzC"
  >
    <h3
      className="sc-AxiKw dJsfJr"
    >
      Label
    </h3>
    <span
      className="sc-AxhCb zWhnK"
    >
       
      45 854
    </span>
  </li>
</ul>
`;
